<resources>
    <string name="app_name">CuponesMVP</string>
    <string name="API_KEY">cf6373ed8e5e287536a8fe699997c3b5</string>
    <string name="title">Titulo del cupon y oferta</string>
    <string name="id">Identificación</string>
    <string name="tienda">Tienda del cupon</string>
    <string name="estado">Estado del cupon</string>
    <string name="tipo">Tipo de oferta</string>
    <string name="link">Link de la oferta</string>
    <string name="fecha">Fecha de la oferta</string>
    <string name="overview">overview</string>
</resources>
